<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bookfinderapp.module.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_camera"
        android:name="com.example.bookfinderapp.module.camera.AndroidCameraApi"
        android:label="@string/menu_find_book"
        tools:layout="@layout/activity_android_camera_api" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.bookfinderapp.module.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <activity
        android:id="@+id/nav_exit"
        android:name="com.example.bookfinderapp.module.book.BookDetailActivity"
        android:label="@string/menu_exit"
        tools:layout="@layout/book_activity" />
</navigation>